cmake_minimum_required(VERSION 3.19)
project(OS C)

set(CMAKE_C_STANDARD 11)

add_executable(6.1 6.1.c)
add_executable(6.2 6.2.c)
add_executable(7.1 7.1.c)
add_executable(7.2 7.2.c)
add_executable(7.3 7.3.c)
add_executable(8Client 8.client.c)
add_executable(8Server 8.server.c)
add_executable(9Client 9.client.c)
add_executable(9Server 9.server.c)